--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.4",
+    "enzyme": "^3.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.0",
     "redux": "^4.1.1",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3"
   }
 }
